fixed cards not showing

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,10 @@ body {
     font-family: sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 #container {
     padding: 16px;
 }
@@ -67,6 +71,18 @@ input {
     padding: 6px 15px;
 }
 
+#search_btn {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.search_btn img {
+    width: 20px;
+    height: 20px;
+}
+
 .column {
     display: flex;
     justify-content: space-between;
@@ -82,10 +98,39 @@ input {
     border-radius: 20px;
 }
 
+#music-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
 .card {
+    padding: 20px;
+    margin: 10px;
+    width: 200px;
+    display: inline-block;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-block-size: 400px;
     border-radius: 20px;
     padding: 10px;
-    text-align: center;
+}
+
+.yt-link {
+    text-shadow: red 2px 2px 8px;
+    color: var(--primary-color);
+}
+
+.rate {
+    margin-top: 10px;
+    background-color: rgba(0, 0, 0, 0.541);
+    border: 1px solid var(--secondary-color);
+    color: yellow;
+    border-radius: 20px;
+    padding: 10px;
+    cursor: pointer;
 }
 
 h3  {
